After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746301 - Opening "Sound" panel generates pixman error
Opening "Sound" panel generates pixman error
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-03-16 16:22 UTC by Bastien Nocera
Modified: 2015-03-16 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2015-03-16 16:22:21 UTC
Launching "gnome-control-center sound" I get:
*** BUG ***
In pixman_region32_init_rect: Invalid rectangle passed
Set a breakpoint on '_pixman_log_error' to debug

This is the backtrace:
  • #0 _pixman_log_error
    from /lib64/libpixman-1.so.0
  • #1 pixman_region32_init_rect
    from /lib64/libpixman-1.so.0
  • #2 INT_cairo_region_create_rectangle
    at cairo-region.c line 338
  • #3 gdk_window_invalidate_rect_full
    at gdkwindow.c line 3942
  • #4 gtk_notebook_redraw_tabs
    at gtknotebook.c line 4854
  • #5 gtk_notebook_pages_allocate
    at gtknotebook.c line 6471
  • #6 gtk_notebook_real_switch_page
    at gtknotebook.c line 6799
  • #7 g_closure_invoke
    at gclosure.c line 768
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3587
  • #9 g_signal_emit_valist
    at gsignal.c line 3305
  • #10 g_signal_emit
    at gsignal.c line 3361
  • #11 gtk_notebook_switch_page
    at gtknotebook.c line 6824
  • #12 gtk_notebook_size_request
    at gtknotebook.c line 2417
  • #13 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 180
  • #14 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 390
  • #15 gtk_widget_get_preferred_width
    at gtksizerequest.c line 489
  • #16 gtk_box_get_size
    at gtkbox.c line 1551
  • #17 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 180
  • #18 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 390
  • #19 gtk_widget_get_preferred_width
    at gtksizerequest.c line 489
  • #20 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 180
  • #21 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 390
  • #22 gtk_widget_get_preferred_width
    at gtksizerequest.c line 489
  • #23 gtk_alignment_get_preferred_size
    at deprecated/gtkalignment.c line 640
  • #24 gtk_alignment_get_preferred_width
    at deprecated/gtkalignment.c line 699
  • #25 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 180
  • #26 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 390
  • #27 gtk_widget_get_preferred_width
    at gtksizerequest.c line 489
  • #28 gtk_stack_get_preferred_width
    at gtkstack.c line 2196
  • #29 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 180
  • #30 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 390
  • #31 gtk_widget_get_preferred_width
    at gtksizerequest.c line 489
  • #32 gtk_box_get_size
    at gtkbox.c line 1551
  • #33 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 180
  • #34 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 390
  • #35 gtk_widget_get_preferred_width
    at gtksizerequest.c line 489
  • #36 gtk_window_get_preferred_width
    at gtkwindow.c line 8324
  • #37 gtk_application_window_real_get_preferred_width
    at gtkapplicationwindow.c line 553
  • #38 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 180
  • #39 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 390
  • #40 gtk_widget_get_preferred_width
    at gtksizerequest.c line 489
  • #41 gtk_widget_query_size_for_orientation
    at gtksizerequest.c line 229
  • #42 gtk_widget_compute_size_for_orientation
    at gtksizerequest.c line 390
  • #43 gtk_widget_get_preferred_height_for_width
    at gtksizerequest.c line 598
  • #44 stack_page_notify_cb
    at cc-window.c line 947
  • #45 g_closure_invoke
    at gclosure.c line 768
  • #46 signal_emit_unlocked_R
    at gsignal.c line 3549
  • #47 g_signal_emit_valist
    at gsignal.c line 3305
  • #48 g_signal_emit
    at gsignal.c line 3361
  • #49 g_object_dispatch_properties_changed
    at gobject.c line 1056
  • #50 g_object_notify_by_spec_internal
    at gobject.c line 1149
  • #51 g_object_notify_by_pspec
    at gobject.c line 1259
  • #52 set_visible_child
    at gtkstack.c line 1096
  • #53 gtk_stack_set_visible_child_full
    at gtkstack.c line 1766
  • #54 gtk_stack_set_visible_child_name
    at gtkstack.c line 1716
  • #55 activate_panel
    at cc-window.c line 172
  • #56 cc_window_set_active_panel_from_id
    at cc-window.c line 1035
  • #57 cc_application_command_line
    at cc-application.c line 239
  • #58 ffi_call_unix64
    at ../src/x86/unix64.S line 76
  • #59 ffi_call
    at ../src/x86/ffi64.c line 525
  • #60 g_cclosure_marshal_generic_va
    at gclosure.c line 1561
  • #61 _g_closure_invoke_va
    at gclosure.c line 831
  • #62 g_signal_emit_valist
    at gsignal.c line 3214
  • #63 g_signal_emit
    at gsignal.c line 3361
  • #64 g_application_call_command_line
    at gapplication.c line 950
  • #65 g_application_real_local_command_line
    at gapplication.c line 1004
  • #66 g_application_run
    at gapplication.c line 2277
  • #67 main
    at main.c line 52

Comment 1 Cosimo Cecchi 2015-03-16 16:24:18 UTC
Bug 746282?
Comment 2 Matthias Clasen 2015-03-16 16:42:33 UTC
nope, this is different